tests/ui/coherence/orphan-check-diagnostics.stderr
error[E0210]: type parameter `T` must be used as the type parameter for some local type (e.g., `MyStruct<T>`)
  --> $DIR/orphan-check-diagnostics.rs:11:6
   |
LL | impl<T> RemoteTrait for T where T: LocalTrait {}
   |      ^ type parameter `T` must be used as the type parameter for some local type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0210`.
